tests/baselines/reference/parserDebuggerStatement1.d.errors.txt
==== tests/cases/compiler/parserDebuggerStatement1.d.ts (1 errors) ====
    debugger;
    ~~~~~~~~
!!! parserDebuggerStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.